changed hnged hero area background image to img to correct rotation on mobile

--- a/app/static/main.css
+++ b/app/static/main.css
@@ -269,10 +269,10 @@ ul {
 /*-------------HERO AREA--------------------------*/
 .hero-area {
     position: relative;
-    background-image: url('kitchen-01.jpg');
-    background-position: 65%;
+    /*background-image: url('cottage-02.jpg');
+    background-position: 0%;
     background-size: cover;
-    background-attachment: scroll;
+    background-attachment: scroll;*/
     width: 100%;
     height: 100%;
     z-index: -1;
@@ -283,6 +283,15 @@ ul {
     justify-content: center;
 }
 
+    .hero-area img {
+        z-index: -2;
+        width: 100%;
+        height: 100%;
+        object-position: 0%;
+        object-fit: cover;
+        image-orientation: from-image;
+        position: absolute;
+    }
 
 /*--------------------- MAIN CONTENT ------------*/
 /*------------ COTTAGE -------------------------*/
@@ -413,7 +422,7 @@ ul {
             box-shadow: 0 1px 1px 0 rgba(0,0,0,0.14), 0 2px 1px -1px rgba(0,0,0,0.12), 0 1px 3px 0 rgba(0,0,0,0.20);
             height: 378px;
             margin-bottom: 32px;
-            background-color: rgba(15, 72, 117, 0.90);
+            /*background-color: rgba(15, 72, 117, 0.90);*/
         }
 
             .calendar-controls {
@@ -513,7 +522,7 @@ ul {
             background-color:white;
             padding-top: 8px;
             padding-bottom: 8px;
-            border-bottom: rgba(15, 72, 117, 0.90);
+            /*border-bottom: rgba(15, 72, 117, 0.90);*/
         }
 
     .temp-space {
